# neurosynth-unified

./: .env.example  .gitignore  =1.0.3  ACTION_PLAN.md  ANALYSIS_SUMMARY.txt  ARCHITECTURE.md  CODEBASE_ANALYSIS_2026-01-04.md  Dockerfile  FRCSC_INTEGRATION_STATUS.md  FRCSC_VERIFICATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_STATUS.md  Makefile  QUICK_START_GUIDE.md  README.md  TESTING_AND_OPTIMIZATION_SUMMARY.md  TEST_RESULTS.md  WORKFLOW_VALIDATION_COMPLETE.md  docker-compose.yml  migration_verification_report.txt  pipeline_fix.patch  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  start-dev.sh  start.sh  stop-dev.sh
baseline_v4/: rag_pterional.json  search_craniotomy.json
config/: __init__.py  patterns.yaml
docs/: IMAGE_EMBEDDING_RETROSPECTIVE.md  REMEDIATION_WORKFLOW.md
examples/: pipeline_usage.py  rag_usage.py  sample_synthesis.json
migrations/: 002_add_authority_score_column.sql  002_frcsc_learning_enhancements.sql  003_frcsc_sample_questions.sql  004_synthesis_gallery.sql  005_gap_detection.sql  006_quality_scores_and_figure_id.sql  add_summary_embedding.sql
patches/: 001_chunker_adaptive_overlap.patch  002_caption_quality_scorer.patch  003_search_synthesis_method.patch  004_synthesis_score_method.patch  005_tripasslinker_page_confidence.patch  README.md
scripts/: BACKFILL_README.md  __init__.py  analyze_retrieval_quality.py  audit_synthesis_alignment.py  backfill_caption_embeddings.py  backfill_cuis.py  backfill_links.py  backfill_missing_data.py  backfill_page_numbers.py  backfill_page_numbers_improved.py  backfill_quality_scores.py  backfill_relations.py  backfill_summary_embeddings.py  backfill_vlm_captions.py  benchmark_search.py  build_faiss_indexes.py  build_indexes.py  diagnose_images.sh  embed_images_subprocess.py  extract_figure_ids.py  fix_image_pipeline.py  generate_biomedclip_embeddings.py  generate_embeddings.py  generate_image_captions.py  generate_pdf.py  init_database.py  init_db.sql  link_images_to_docs.py  migrate_phase1_exports.py  recaption_failed_images.py  relink_with_proximity.py  simple_pdf_export.py  test_api_comprehensive.py  test_chat_hardening.py  test_full_pipeline.py  test_memory_safe_ingest.py  test_synthesis_fixes.py  verify_api_alignment.py  verify_image_search.py
scripts/synthesis_fixes/: __init__.py  enhanced_context_adapter.py
src/: __init__.py
src/api/: __init__.py  dependencies.py  main.py  models.py
src/chat/: __init__.py  engine.py  routes.py  store.py
src/core/: __init__.py  chunk_config.py  database.py  device_utils.py  edge_ranking.py  enhanced_chunker.py  hybrid_extractor.py  logging_config.py  metrics.py  model_manager.py  neuro_chunker.py  neuro_extractor.py  quality_scorer.py  relation_config.py  relation_extractor.py  tui_weights.py  umls_extractor.py
src/database/: __init__.py  __init__.py.backup  connection.py  schema.sql
src/ingest/: __init__.py  __init__.py.backup_phase3  chunk_summarizer.py  config.py  contextual_preprocessor.py  database_writer.py  embeddings.py  fusion.py  fusion.py.orig  image_extractor.py  job_store.py  memory_safe_pipeline.py  pipeline.py  pipeline.py.backup_20251225_223613  pipeline.py.backup_20251225_235528  relation_pipeline.py  section_detector.py  subprocess_embedder.py  table_extractor.py  unified_pipeline.py
tests/: __init__.py  conftest.py  test_transaction_rollback.py  test_v22_chunk_optimization.py
(+169 files in other folders)
